--- a/assets/css/_homePage.scss
+++ b/assets/css/_homePage.scss
@@ -13,6 +13,10 @@
         display: none;
     }
 
+    .bottomNav{
+        display: none;
+    }
+
     .aboutMeDesktop {
         background-color: $bodyBackground;
         padding-top: 5vh;
@@ -65,24 +69,87 @@
                 font-size: 1.5rem;
                 font-weight: 400;
                 color: $navTextColor;
-                text-decoration: none;
             }
         }
     }
 
-    .portfolioSection {
-        height: 43vh;
-        width: 100%;
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
 
-        div {
-            width: 50vw;
-            height: 85%;
-            margin: 3vw;
-            background-color: white;
+    .content-slider h3 {
+        margin: 0;
+        padding: 70px 0;
+    }
+    .portfolioSilderContainer {
+        padding-top: 2vh;
+        height: 43vh;
+        width: 100vw;
+    }
+
+    .content-slider li {
+        background-color: red;
+      }
+
+    .card {
+
+        margin: 5vh 25vw;
+        box-shadow: 2px 10px 12px 
+            rgba($color: #000, $alpha: .5);
+        position: relative;
+        background: url(/assets/media/background.jpg);
+        border-radius: 10px;
+        background-size: cover;
+        display: flex;
+        justify-content: center;
+        align-content: center;
+
+        .overlay {
+            position: absolute;
+            width:100%;
+            height: 100%;
             border-radius: 10px;
+            background-color: rgba(#000,0.2);
+            visibility: hidden;
+        }
+        
+        &:hover {
+            .overlay {
+                visibility: visible;
+                animation: fade 500ms;
+            }
+        }
+        @keyframes fade {
+            0% {opacity: 0;}
+            100%{ opacity: 1;}
+        }
+        
+        .cardButton {
+            width: 25vw;
+            height: 10%;
+            top: 75%;
+            left: 20%;
+            border: none;
+            color: $headingColor;
+            background-color: $buttonColor;
+            border-radius: 5px;
+            transition: ease-out 800ms;
+            font-size: .75rem;
+            font-weight: 500;
+            outline: none;
+            position: absolute;
+            
+            &:hover {
+                box-shadow: inset 125px 0 0 0 rgb(255, 255, 255);
+                cursor: pointer;
+                color: $navBackgroundColor;
+            }
+        }
+        
+        .titleText {
+            top: 20%;
+            left: 15%;
+            letter-spacing: $letter-spacing;
+            position: absolute;
+            color: rgb(255, 255, 255);
+            font-size: 2rems;
         }
     }
 }
