--- a/assets/css/_nav.scss
+++ b/assets/css/_nav.scss
@@ -24,7 +24,6 @@
             padding-left: 2.5vw;
             a {
                 color: $navTextColor;
-                text-decoration: none;
                 font-weight: 700;
             }
         }
@@ -50,7 +49,6 @@
             
             a {
                 color: $navTextColor;
-                text-decoration: none;
                 text-transform: uppercase;
                 letter-spacing: $letter-spacing;
                 font-size: $head3;
@@ -80,6 +78,7 @@
     }
 
     .logo{
+        z-index: 999;
         padding-top: $mobilePaddingTop;
         padding-left: 2.5vw;
         text-transform: uppercase;
@@ -88,7 +87,6 @@
         a {
             color: $navTextColor;
             font-size: 1.5rem;
-            text-decoration: none;
             font-weight: 700;
         }
     }
@@ -106,6 +104,7 @@
     }
 
     .nav-toggle-label {
+        z-index: 999;
         padding-top: $mobilePaddingTop;
         position: absolute;
         right: 0;
@@ -161,7 +160,6 @@
         }
         a{
             opacity: 0;
-            text-decoration: none;
             text-transform: uppercase;
             letter-spacing: $letter-spacing;
             display: block;
