--- a/assets/css/_homePage.scss
+++ b/assets/css/_homePage.scss
@@ -82,6 +82,9 @@
         padding-top: 2vh;
         height: 43vh;
         width: 100vw;
+        display: flex;
+        justify-content: center;
+        align-content: center;
     }
 
     .content-slider li {
@@ -89,11 +92,10 @@
       }
 
     .card {
-
-        margin: 5vh 25vw;
+        width: 300px;
+        height: 450px;
         box-shadow: 2px 10px 12px 
             rgba($color: #000, $alpha: .5);
-        position: relative;
         background: url(/assets/media/background.jpg);
         border-radius: 10px;
         background-size: cover;
@@ -102,14 +104,13 @@
         align-content: center;
 
         .overlay {
-            position: absolute;
             width:100%;
             height: 100%;
             border-radius: 10px;
             background-color: rgba(#000,0.2);
-            visibility: hidden;
+            //visibility: hidden;
         }
-        
+        /*
         &:hover {
             .overlay {
                 visibility: visible;
@@ -119,13 +120,12 @@
         @keyframes fade {
             0% {opacity: 0;}
             100%{ opacity: 1;}
-        }
+        }*/
         
         .cardButton {
             width: 25vw;
             height: 10%;
-            top: 75%;
-            left: 20%;
+
             border: none;
             color: $headingColor;
             background-color: $buttonColor;
@@ -134,7 +134,6 @@
             font-size: .75rem;
             font-weight: 500;
             outline: none;
-            position: absolute;
             
             &:hover {
                 box-shadow: inset 125px 0 0 0 rgb(255, 255, 255);
@@ -144,10 +143,8 @@
         }
         
         .titleText {
-            top: 20%;
-            left: 15%;
+
             letter-spacing: $letter-spacing;
-            position: absolute;
             color: rgb(255, 255, 255);
             font-size: 2rems;
         }
