Card Slider working with cards in place, just need to fix button placement

--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -17,6 +17,7 @@ $navTextColor: #FFFFFF;
 $navTextColorActive: #002E4C;
 $currentPage: #C7423F;
 $hamburgerBarColor: #FFFFFF;
+$bottomNavBackgroundColor: #001BFF;
 
 /* Distances */
 $pIndent: 2.5%;
