--- a/assets/css/_homePage.scss
+++ b/assets/css/_homePage.scss
@@ -71,46 +71,46 @@
                 color: $navTextColor;
             }
         }
-    }
+        /* Slider */
 
-
-    .content-slider h3 {
-        margin: 0;
-        padding: 70px 0;
-    }
-    .portfolioSilderContainer {
-        padding-top: 2vh;
-        height: 43vh;
-        width: 100vw;
-        display: flex;
-        justify-content: center;
-        align-content: center;
-    }
-
-    .content-slider li {
-        background-color: red;
-      }
-
-    .card {
-        width: 300px;
-        height: 450px;
-        box-shadow: 2px 10px 12px 
-            rgba($color: #000, $alpha: .5);
-        background: url(/assets/media/background.jpg);
-        border-radius: 10px;
-        background-size: cover;
-        display: flex;
-        justify-content: center;
-        align-content: center;
-
-        .overlay {
-            width:100%;
-            height: 100%;
-            border-radius: 10px;
-            background-color: rgba(#000,0.2);
-            //visibility: hidden;
+        ul{
+            list-style: none outside none;
+            padding-left: 0;
+            margin: 0;
         }
-        /*
+        .portfolioSilderContainer{
+            position: absolute;
+            padding: 10px;
+            height: 43vh;
+            width: 100vw;
+        }
+        .content-slider {
+            width: 100%;
+            height: 325px;
+        }
+        .content-slider li{
+            text-align: center;
+            color: #FFF;
+            margin: 0;
+            width: 150px;
+            height: 300px;
+        }
+    }
+    .card {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        background: url(/assets/media/background.jpg);
+        background-size: cover; 
+        border-radius: 10px;
+        .overlay {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            border-radius: 10px;
+            background-color: rgba(black,0.2);
+            visibility: hidden;
+        }
         &:hover {
             .overlay {
                 visibility: visible;
@@ -120,12 +120,15 @@
         @keyframes fade {
             0% {opacity: 0;}
             100%{ opacity: 1;}
-        }*/
+        }
         
         .cardButton {
-            width: 25vw;
-            height: 10%;
-
+            /*
+            top: 180px;
+            left: 25px;
+            width: 100px;
+            height: 30px;
+            */
             border: none;
             color: $headingColor;
             background-color: $buttonColor;
@@ -141,12 +144,13 @@
                 color: $navBackgroundColor;
             }
         }
-        
-        .titleText {
-
+        .cardText p{
+            position: relative;
+            font-weight: 700;
+            text-align: center;
             letter-spacing: $letter-spacing;
             color: rgb(255, 255, 255);
-            font-size: 2rems;
+            font-size: 1.5rem;
         }
     }
 }
