--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,8 +8,6 @@
 */
 /* Colors */
 /* Nav colors */
-/* Bottom Nav */
-/* Slider dot color */
 /* Distances */
 /* This is since the header container has a height of zero
 and to have the tranparent expect of the nav */
@@ -301,6 +299,7 @@ and to have the tranparent expect of the nav */
     height: 90vh;
     width: 100vw;
     color: #fff;
+    /* Slider */
   }
   .aboutMeMobile .titleText {
     padding: 7vh 10vw 0vh 10vw;
@@ -335,22 +334,97 @@ and to have the tranparent expect of the nav */
     font-weight: 400;
     color: #FFFFFF;
   }
-  .portfolioSilder {
+  .aboutMeMobile ul {
+    list-style: none outside none;
+    padding-left: 0;
+    margin: 0;
+  }
+  .aboutMeMobile .portfolioSilderContainer {
+    position: absolute;
+    padding: 10px;
     height: 43vh;
+    width: 100vw;
+  }
+  .aboutMeMobile .content-slider {
     width: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    height: 325px;
+  }
+  .aboutMeMobile .content-slider li {
+    text-align: center;
+    color: #FFF;
+    margin: 0;
+    width: 150px;
+    height: 300px;
+  }
+  .card {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background: url(/assets/media/background.jpg);
+    background-size: cover;
+    border-radius: 10px;
+  }
+  .card .overlay {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    border-radius: 10px;
+    background-color: rgba(0, 0, 0, 0.2);
+    visibility: hidden;
+  }
+  .card:hover .overlay {
+    visibility: visible;
+    -webkit-animation: fade 500ms;
+            animation: fade 500ms;
+  }
+  @-webkit-keyframes fade {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  @keyframes fade {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  .card .cardButton {
+    /*
+            top: 180px;
+            left: 25px;
+            width: 100px;
+            height: 30px;
+            */
+    border: none;
+    color: #fff;
+    background-color: #8B8B8B;
+    border-radius: 5px;
+    -webkit-transition: ease-out 800ms;
+    transition: ease-out 800ms;
+    font-size: .75rem;
+    font-weight: 500;
+    outline: none;
+  }
+  .card .cardButton:hover {
+    -webkit-box-shadow: inset 125px 0 0 0 white;
+            box-shadow: inset 125px 0 0 0 white;
+    cursor: pointer;
+    color: #303030;
+  }
+  .card .cardText p {
+    position: relative;
+    font-weight: 700;
+    text-align: center;
+    letter-spacing: 0.5px;
+    color: white;
+    font-size: 1.5rem;
   }
 }
-
-
 
 /*
   Author: Steven Varada Salazr
