--- a/assets/css/_homePage.scss
+++ b/assets/css/_homePage.scss
@@ -7,38 +7,14 @@
                Both nav types are in media separte queries
 */
 
-/* Laptop and Desktop Navigation */
-@media all and (min-width: $laptop) {
-    .aboutMeMobile {
-        display: none;
-    }
-
-    .bottomNav{
-        display: none;
-    }
-
-    .aboutMeDesktop {
-        background-color: $bodyBackground;
-        padding-top: 5vh;
-    }
-}
-
 /* Mobile and Tablet Naviagation */
-@media only screen and (max-width: $laptop) {
-    .aboutMeDesktop {
-        display: none;
-    }
 
-    .aboutMeMobile {
-        background: 
-            linear-gradient(rgba(0,0,0,0.6),
-                            rgba(0,0,0,0.3))
-                            ,url(../media/mobileBackground.jpg);
-        background-size: cover;
-        top: 5vh;
-        height: 90vh;
-        width: 100vw;
-        color: $headingColor;
+
+
+    .aboutMe {
+        top: 15vh;
+        position: relative;
+        color: $menuBackgroundColor;
 
         .titleText {
             padding: 7vh 10vw 0vh 10vw;
@@ -139,7 +115,7 @@
             &:hover {
                 box-shadow: inset 125px 0 0 0 rgb(255, 255, 255);
                 cursor: pointer;
-                color: $navBackgroundColor;
+                color: $menuBackgroundColor;
             }
         }
         .cardText p{
@@ -148,6 +124,62 @@
             letter-spacing: $letter-spacing;
             color: rgb(255, 255, 255);
             font-size: 1.5rem;
+        }
+    }
+
+/* Skills Card */
+.skillSection {
+    background-color: #FFF;
+    padding: 2rem;
+    width: 100%;
+    height: 1000px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    .skillCard {
+        width: 80%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        .columnsContainer {
+            padding: 2rem;
+            width: 90%;
+            height: 90%;
+            display: flex;
+            justify-content: space-evenly;
+            // box-shadow: 0 5px 5px 0 rgba(233 240 243, .50), 
+            // 0 0 0 1px #e6ecf8;
+            box-shadow: 0 0 15px rgba($color: black, $alpha: .7);
+        }
+        .columns {
+            width: 250px;
+            text-align: center;
+            ol {
+                list-style: none;
+            }
+            button {
+
+                width: 100px;
+                height: 30px;
+                border: none;
+                color: $headingColor;
+                background-color: $buttonColor;
+                border-radius: 5px;
+                transition: ease-out 800ms;
+                font-size: .75rem;
+                font-weight: 500;
+                outline: none;
+                
+                &:hover {
+                    box-shadow: inset 125px 0 0 0 rgb(255, 255, 255);
+                    cursor: pointer;
+                    color: $menuBackgroundColor;
+                }
+            }
         }
     }
 }
