--- a/assets/css/_nav.scss
+++ b/assets/css/_nav.scss
@@ -3,210 +3,168 @@
   Project: Resume Website
   File: nav.scss
   Date: Dec.23-2021
-  Description: This has all of the styling for the mobile and desktop nav
-               Both nav types are in media separte queries
+  Description: Desktop and mobile friendly navigation bar, use checkbox checked
+        psuedo class, checked, to make the menu appaer and change the other elements 
+        attributes. This is done using the general selector in the check psudeo class
 */
 
-/* Navigation bar for Laptop and Desktop */
-@media all and (min-width: $laptop) {
-    header {
-        max-height: 0px;
-        position: sticky;
-        align-items: center;
-        top: 0vh;
-        display: flex;
-        justify-content: space-between;
-        .logo{
-            padding-top: $desktopPaddingTop;
-            position: relative;
-            text-transform: uppercase;
-            font-size: $head2;
-            padding-left: 2.5vw;
-            a {
-                color: $navTextColor;
-                font-weight: 700;
-            }
-        }
+/* Naviagation Bar */
 
-        .nav-toggle{
-            display: none;
-        }
-
-        nav {
-            padding-top: $desktopPaddingTop;
-            ul {
-                width: 100%;
-                list-style: none;
-                display: flex;
-                justify-content: space-between;
-                padding-right: 2.5vw;
-            }
-
-            li {
-                padding: .5em;
-                text-align: center;
-            }
-            
-            a {
-                color: $navTextColor;
-                text-transform: uppercase;
-                letter-spacing: $letter-spacing;
-                font-size: $head3;
-                padding: .5em;
-                &:hover, &:focus{
-                    color: $navTextColorActive;
-                    border-radius: 10px;
-                    box-shadow:
-                        0 0 10px $navTextColorActive;
-                }
-            }
-        }
-    }
-}
-
-/* Naviagation Bar for Mobile and Tablet */
-@media only screen and (max-width: $laptop) {
-    header {
-        max-height: 0px;
-        background-color: $headerColor;
-        position: sticky;
-        align-items: center;
-        top: 0;
-        width: 100%;
-        display: flex;
-        justify-content: space-between;
-    }
-
-    .logo{
+header {
+    position: sticky;
+    top: $headerTopPadding;
+    max-height: $headerHeight;
+    padding: 0 5vw 0 5vw;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    .logo {
         z-index: 999;
-        padding-top: $mobilePaddingTop;
-        padding-left: 2.5vw;
-        text-transform: uppercase;
-        font-size: $head3;
-
+        filter: drop-shadow(-10px 5px 0px rgba(black,0.1));
         a {
             color: $navTextColor;
-            font-size: 1.5rem;
+            text-transform: uppercase;
+            font-size: $head3;
             font-weight: 700;
+            transition: all 800ms ease-in-out;
         }
     }
 
-    .nav-toggle{
+    /* This is the toggle for the menu ~ checkbox*/
+    .nav-toggle {
         display: none;
+        &:checked ~ .logo a{
+                color: $menuTextColorActive;
+        }
         &:checked ~ nav {
             transform: scale(1,1);
-
-            a{
+            a {
                 opacity: 1;
                 transition: opacity 250ms ease-in-out 275ms;
             }
         }
+        /* Hamburger Animation */
+        &:checked ~ .nav-toggle-label{
+            .menu p {
+                color: $menuTextColorActive;
+                transform: translateX($hamburgerBarWidth/2);
+            }
+            span{
+                transform: translateX($hamburgerBarWidth);
+                background: transparent;
+            }
+            span::before {
+                background-color: $menuTextColorActive;
+                transform: 
+                    rotate(45deg) 
+                    translate(-$hamburgerBarWidth/2, $hamburgerBarWidth/2)
+            }
+            span::after {
+                background-color: $menuTextColorActive;
+                transform: 
+                    rotate(-45deg)
+                    translate(-$hamburgerBarWidth/2, -$hamburgerBarWidth/2);
+            }
+        }
     }
 
+    /* This is the hamburger Icon */
     .nav-toggle-label {
-        z-index: 999;
-        padding-top: $mobilePaddingTop;
-        position: absolute;
-        right: 0;
-        margin-right: 5vw;
         height: 100%;
+        z-index: 999;
         display: flex;
         align-items: center;
+        .menu {
+            position: relative;
+            right: $hamburgerBarWidth/2;
+            z-index: 999;
+            p {
+                transition: all 800ms ease-in-out;
+                color: black;
+                text-transform: uppercase;
+                font-weight: 600;
+            }
+        }
         span,
-        span::before, 
+        span::before,
         span::after {
             background-color: $hamburgerBarColor;
-            position: relative;
-            height: 2px;
-            width: 1.5em;
+            height: 3px;
+            border-radius: 25px;
+            width: $hamburgerBarWidth;
             display: block;
-        } 
+            transition: all 800ms ease-in-out;
+        }
         span::before,
-        span::after{
+        span::after {
             content: "";
-            background-color: $hamburgerBarColor;
             position: absolute;
         }
-        span::before{
-            bottom: 7px;
+        span::before {
+            transform: translateY(-8px);
         }
-        span::after{
-            top: 7px;
+        span::after {
+            transform: translateY(8px);
         }
     }
-
+      /* This is the menu with a nav container */
     nav {
-        z-index: 99;
-        background-color: $navBackgroundColor;
-        opacity: 1;
-        position: absolute;
+        background: $menuBackgroundColor;
+        position: fixed;
         top: 0;
-        width: 100%;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
         transform: scale(1,0);
-        transition: transform 400ms ease-in-out;
         transform-origin: top;
-        
-        ul {
-            list-style: none;
-            height: $mobileNavHeight;
+        transition: transform 700ms ease-in-out;
+        /* Menu */
+        ul  {
             width: 100%;
-            flex-direction: column;
+            height: 100%;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
+            lh {
+                position: relative;
+                color: $menuTextColorActive;
+                font-size: $bodyText;
+                text-transform: uppercase;
+            }
         }
         li {
-            text-align: center;
             width: 100%;
         }
-        a{
+        a {
+            color: $menuTextColor;
             opacity: 0;
             text-transform: uppercase;
-            letter-spacing: $letter-spacing;
-            display: block;
-            font-size: $head2;
-            transition: opacity 150ms ease-in-out;
-        }
-    }
-
-    .bottomNav{
-        background-color: $bottomNavBackgroundColor;
-        display: flex;
-        top: 0px;
-        justify-content: space-around;
-        align-items: flex-end;
-        height: 10vh;
-
-        div {
-            flex-grow: 1;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            height: 100%;
-            width: 100%;
-        }
-
-        img {
-            align-items: center;
-            height: 50%;
-            width: 50%;
-        }
-
-        h3 {
-            color: $headingColor;
+            font-size: $head1;
             font-weight: 500;
-            text-transform: uppercase;
-            letter-spacing: $letter-spacing;
-            margin-top: 1vh;
-            margin-bottom: 1vh;
+            text-align: center;
+            display: block;
+            &:hover {
+                color: $menuTextColorActive;
+            }
+        }
+    }
+
+    @media all and (min-width: $laptop)   {
+        header {
+            top: 0;
+        }
+        .logo {
+            a {
+                font-size: $head2;
+            }
+        }
+        nav{
+            a {
+                font-size: $head1;
+            }
         }
     }
 }
 
-/* Highlight the current page */
-.currentpage {
-    a {
-        color: $currentPage;
-    }
-}
