--- a/assets/css/_homePage.scss
+++ b/assets/css/_homePage.scss
@@ -3,183 +3,135 @@
   Project: Resume Website
   File: homepage.scss
   Date: Dec.23-2021
-  Description: This has all of the styling for the mobile and desktop homepage
-               Both nav types are in media separte queries
+  Description: Homepage body is setup with a grid of 12 columns, the recent works
+        use JQuery and a MIT lienced card slider to demo recent projects
+            Scetions Order
+                - Header
+                - About Me
+                - Recent Works
+                - Skills
+                - Expereience
+                - Contact Card
 */
 
-/* Mobile and Tablet Naviagation */
+header {
+    position: relative;
+    display: grid;
+    grid-template-rows: 70vh 15vh 5vh 10vh;
+    grid-template-areas:
+    "titleName  titleName titleName"
+    "subheading subheading subheading"
+    "links links links"
+    "space space space";
+    justify-items: center;
+    &::before {
+        content: "";
+        background: 
+        linear-gradient(rgba(0,0,0,0.5),
+                        rgba(0,0,0,0.01))
+                       ,url(/assets/media/introMobile.svg);
+        background-size: cover;
+        width: 100%;
+        grid-row: titleName / space;
+        grid-column: titleName;
+        z-index: -2;
+    }
 
+    &::after {
+        content: "";
+        background-color: rgba( $dominantColor, .35);
+        filter: blur(2rem);
+        width: 95%;
+        height: 100%;
+        grid-row: subheading / links;
+        grid-column: titleName;
+        z-index: -1;
+    }
 
+    .titleName {
+        color: $dominantColor;
+        align-self: center;
+        text-align: center;
+        grid-area: titleName;
+        filter: drop-shadow($boxShadow);
+    }
 
-    .aboutMe {
-        top: 15vh;
-        position: relative;
-        color: $menuBackgroundColor;
-
-        .titleText {
-            padding: 7vh 10vw 0vh 10vw;
-        }
-
-        h1 {
-            font-size: 3rem;
-            font-weight: 700;
-        }
-
-        h3 {
-            color: $subHeadingColor;
-            font-size: 1.25rem;
-            font-weight: 300;
-        }
-        
-        .heading {
-            padding-top: 5vh;
-            width: 100%;
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-            h2 {
-                font-size: 1.5rem;
-                font-weight: 500;
+    .subheading {
+        width: 90%;
+        grid-area: subheading;
+        .typing {
+            color: $ascentLightBrown;
+            position: relative;
+            align-self: end;
+            &::after {
+                content: "";
+                position: relative;
+                top: -4px;
+                right: -2px;
+                width: 1px;
+                height: 100%;
+                border-right: 2px solid $dominantColor;
+                animation: blinking $typingSpeed infinite ease;
             }
-            a {
-                font-size: 1.5rem;
-                font-weight: 400;
-                color: $navTextColor;
+            @keyframes blinking {
+                0% { opacity: 0;}
+                100% {opacity: 1;}
             }
         }
-        /* Slider */
-
-        ul{
-            list-style: none outside none;
-            padding-left: 0;
-            margin: 0;
-        }
-        .portfolioSilderContainer{
-            position: absolute;
-            padding: 10px;
-            height: 43vh;
-            width: 100vw;
-        }
-        .content-slider {
-            width: 100%;
-            height: 325px;
-        }
-        .content-slider li{
-            text-align: center;
-            color: #FFF;
-            margin: 0;
-            width: 150px;
-            height: 300px;
+        h5 {
+            color: $ascentBlue;
+            padding-top: 1vh;
+            font-weight: 500;
         }
     }
-    .card {
-        position: relative;
+    
+    .links {
+        display: flex;
+        width: 100%;
+        justify-content: space-evenly;
+        grid-area: links;
+        a {
+            color: $ascentBlue;
+            font-size: $head5;
+        }
+    }
+    @media all and (min-width: $laptop) {
+        &::before{
+            background: linear-gradient(rgba(0,0,0,0.5),
+                                        rgba(0,0,0,0.01))
+                        ,url(/assets/media/introDesktop.svg);
+            background-size: cover;
+
+        }
+    }
+}
+
+.aboutMe {
+    padding: 2rem;
+    height: 60vh;
+    display: grid;
+    grid: auto-flow / minmax(1em,1fr) repeat (3,1fr) minmax(1em,1fr);
+    // grid-template-areas: 
+    //     " waterMark space space1"
+    //     " waterMark    card    card "
+    //     " space2       card    card ";
+    justify-items: center;
+    align-items: center;
+    h2 {
+        // grid-row: waterMark / space2-start;
+        // grid-column: waterMark / space-end;
+        color: rgba( $secondaryColor, 1);
+        filter: drop-shadow($dropShadow);
+        z-index: -1;
+    }
+    p {
+        background: rgba($color: $ascentBrown, $alpha: .50);
         width: 100%;
         height: 100%;
-        background: url(/assets/media/background.jpg);
-        background-size: cover; 
-        border-radius: 10px;
-        .overlay {
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            border-radius: 10px;
-            background-color: rgba(black,0.2);
-            visibility: hidden;
-        }
-        &:hover {
-            .overlay {
-                visibility: visible;
-                animation: fade 500ms;
-            }
-        }
-        @keyframes fade {
-            0% {opacity: 0;}
-            100%{ opacity: 1;}
-        }
-        
-        .cardButton {
-            position: relative;
-            top: 70%;
-            width: 100px;
-            height: 30px;
-            border: none;
-            color: $headingColor;
-            background-color: $buttonColor;
-            border-radius: 5px;
-            transition: ease-out 800ms;
-            font-size: .75rem;
-            font-weight: 500;
-            outline: none;
-            
-            &:hover {
-                box-shadow: inset 125px 0 0 0 rgb(255, 255, 255);
-                cursor: pointer;
-                color: $menuBackgroundColor;
-            }
-        }
-        .cardText p{
-            font-weight: 700;
-            text-align: center;
-            letter-spacing: $letter-spacing;
-            color: rgb(255, 255, 255);
-            font-size: 1.5rem;
-        }
-    }
-
-/* Skills Card */
-.skillSection {
-    background-color: #FFF;
-    padding: 2rem;
-    width: 100%;
-    height: 1000px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-    .skillCard {
-        width: 80%;
-        height: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-        .columnsContainer {
-            padding: 2rem;
-            width: 90%;
-            height: 90%;
-            display: flex;
-            justify-content: space-evenly;
-            // box-shadow: 0 5px 5px 0 rgba(233 240 243, .50), 
-            // 0 0 0 1px #e6ecf8;
-            box-shadow: 0 0 15px rgba($color: black, $alpha: .7);
-        }
-        .columns {
-            width: 250px;
-            text-align: center;
-            ol {
-                list-style: none;
-            }
-            button {
-
-                width: 100px;
-                height: 30px;
-                border: none;
-                color: $headingColor;
-                background-color: $buttonColor;
-                border-radius: 5px;
-                transition: ease-out 800ms;
-                font-size: .75rem;
-                font-weight: 500;
-                outline: none;
-                
-                &:hover {
-                    box-shadow: inset 125px 0 0 0 rgb(255, 255, 255);
-                    cursor: pointer;
-                    color: $menuBackgroundColor;
-                }
-            }
-        }
+        padding: 3rem;
+        font-size: .75rem;
+        border: 2px black solid;
+        // grid-row: card;
+        // grid-column: card;
     }
 }
