--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,32 +2,37 @@
 /*
   Author: Steven Varada Salazr
   Project: Resume Website
-  File: variables.scss
+  File: _variables.scss
   Date: Dec.23-2021
-  Description: This files holds all of the variables for all of the css files
+  Description: Variables for all of the files in the project
+      CSS afttribute ordering:
+        1. Display
+        2. Positioning
+        3. Box-model
+        4. Typography
+        5. Manipulation
+        6. Miscellaneous
 */
 /* Colors */
-/* Nav colors */
+/*Ascent Colors */
+/* grey shades */
 /* Distances */
 /* Text */
+/* Animation Speeds */
+/* Don't forgot to fix the speed in type function of JS */
 /* Media Queries */
+/* Miscellaneous */
 /*
   Author: Steven Varada Salazr
   Project: Resume Website
-  File: nav.scss
+  File: _nav.scss
   Date: Dec.23-2021
   Description: Desktop and mobile friendly navigation bar, use checkbox checked
         psuedo class, checked, to make the menu appaer and change the other elements 
         attributes. This is done using the general selector in the check psudeo class
 */
 /* Naviagation Bar */
-header {
-  position: -webkit-sticky;
-  position: sticky;
-  top: 2vh;
-  max-height: 5vh;
-  padding: 0 5vw 0 5vw;
-  width: 100%;
+nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -37,130 +42,133 @@ header {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 2vh;
+  max-height: 5vh;
+  padding: 0 5vw 0 5vw;
+  width: 100%;
   /* This is the toggle for the menu ~ checkbox*/
   /* This is the hamburger Icon */
-  /* This is the menu with a nav container */
 }
 
-header .logo {
-  z-index: 999;
+nav .logo {
+  z-index: 5;
   -webkit-filter: drop-shadow(-10px 5px 0px rgba(0, 0, 0, 0.1));
           filter: drop-shadow(-10px 5px 0px rgba(0, 0, 0, 0.1));
 }
 
-header .logo a {
-  color: black;
-  text-transform: uppercase;
-  font-size: 1.25rem;
+nav .logo a {
+  color: #8B8B8B;
+  font-size: 1.75rem;
   font-weight: 700;
   -webkit-transition: all 800ms ease-in-out;
   transition: all 800ms ease-in-out;
 }
 
-header .nav-toggle {
+nav .menu-toggle {
   display: none;
   /* Hamburger Animation */
 }
 
-header .nav-toggle:checked ~ .logo a {
+nav .menu-toggle:checked ~ .logo a {
   color: #FFF;
 }
 
-header .nav-toggle:checked ~ nav {
+nav .menu-toggle:checked ~ menu {
   -webkit-transform: scale(1, 1);
           transform: scale(1, 1);
 }
 
-header .nav-toggle:checked ~ nav a {
+nav .menu-toggle:checked ~ menu a {
   opacity: 1;
   -webkit-transition: opacity 250ms ease-in-out 275ms;
   transition: opacity 250ms ease-in-out 275ms;
 }
 
-header .nav-toggle:checked ~ .nav-toggle-label .menu p {
+nav .menu-toggle:checked ~ .menu-toggle-label .menu p {
   color: #FFF;
   -webkit-transform: translateX(0.75rem);
           transform: translateX(0.75rem);
 }
 
-header .nav-toggle:checked ~ .nav-toggle-label span {
+nav .menu-toggle:checked ~ .menu-toggle-label span {
+  background: transparent;
   -webkit-transform: translateX(1.5rem);
           transform: translateX(1.5rem);
-  background: transparent;
 }
 
-header .nav-toggle:checked ~ .nav-toggle-label span::before {
+nav .menu-toggle:checked ~ .menu-toggle-label span::before {
   background-color: #FFF;
   -webkit-transform: rotate(45deg) translate(-0.75rem, 0.75rem);
           transform: rotate(45deg) translate(-0.75rem, 0.75rem);
 }
 
-header .nav-toggle:checked ~ .nav-toggle-label span::after {
+nav .menu-toggle:checked ~ .menu-toggle-label span::after {
   background-color: #FFF;
   -webkit-transform: rotate(-45deg) translate(-0.75rem, -0.75rem);
           transform: rotate(-45deg) translate(-0.75rem, -0.75rem);
 }
 
-header .nav-toggle-label {
-  height: 100%;
-  z-index: 999;
+nav .menu-toggle-label {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  height: 100%;
+  z-index: 5;
 }
 
-header .nav-toggle-label .menu {
+nav .menu-toggle-label .menu {
   position: relative;
   right: 0.75rem;
-  z-index: 999;
 }
 
-header .nav-toggle-label .menu p {
-  -webkit-transition: all 800ms ease-in-out;
-  transition: all 800ms ease-in-out;
-  color: black;
+nav .menu-toggle-label .menu p {
   text-transform: uppercase;
   font-weight: 600;
-}
-
-header .nav-toggle-label span,
-header .nav-toggle-label span::before,
-header .nav-toggle-label span::after {
-  background-color: #141414;
-  height: 3px;
-  border-radius: 25px;
-  width: 1.5rem;
-  display: block;
   -webkit-transition: all 800ms ease-in-out;
   transition: all 800ms ease-in-out;
 }
 
-header .nav-toggle-label span::before,
-header .nav-toggle-label span::after {
+nav .menu-toggle-label span,
+nav .menu-toggle-label span::before,
+nav .menu-toggle-label span::after {
+  display: block;
+  background-color: #141414;
+  height: 3px;
+  width: 1.5rem;
+  border-radius: 25px;
+  -webkit-transition: all 800ms ease-in-out;
+  transition: all 800ms ease-in-out;
+}
+
+nav .menu-toggle-label span::before,
+nav .menu-toggle-label span::after {
   content: "";
   position: absolute;
 }
 
-header .nav-toggle-label span::before {
+nav .menu-toggle-label span::before {
   -webkit-transform: translateY(-8px);
           transform: translateY(-8px);
 }
 
-header .nav-toggle-label span::after {
+nav .menu-toggle-label span::after {
   -webkit-transform: translateY(8px);
           transform: translateY(8px);
 }
 
-header nav {
+nav menu {
   background: #002E4C;
   position: fixed;
   top: 0;
   left: 0;
   width: 100vw;
   height: 100vh;
+  z-index: 4;
   -webkit-transform: scale(1, 0);
           transform: scale(1, 0);
   -webkit-transform-origin: top;
@@ -169,12 +177,9 @@ header nav {
   transition: -webkit-transform 700ms ease-in-out;
   transition: transform 700ms ease-in-out;
   transition: transform 700ms ease-in-out, -webkit-transform 700ms ease-in-out;
-  /* Menu */
 }
 
-header nav ul {
-  width: 100%;
-  height: 100%;
+nav menu ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -188,42 +193,42 @@ header nav ul {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  width: 100%;
+  height: 100%;
 }
 
-header nav ul lh {
-  position: relative;
+nav menu ul lh {
   color: #FFF;
+  position: relative;
   font-size: 1rem;
   text-transform: uppercase;
 }
 
-header nav li {
+nav menu li {
   width: 100%;
 }
 
-header nav a {
+nav menu a {
+  display: block;
   color: #8B8B8B;
   opacity: 0;
+  position: relative;
+  text-align: center;
   text-transform: uppercase;
   font-size: 3.75rem;
   font-weight: 500;
-  text-align: center;
-  display: block;
 }
 
-header nav a:hover {
+nav menu a:hover {
   color: #FFF;
 }
 
 @media all and (min-width: 1024px) {
-  header header {
-    top: 0;
-  }
-  header .logo a {
+  nav .logo a {
     font-size: 2.5rem;
   }
-  header nav a {
-    font-size: 3.75rem;
+  nav menu a {
+    font-size: 4.5rem;
   }
 }
 
@@ -232,232 +237,168 @@ header nav a:hover {
   Project: Resume Website
   File: homepage.scss
   Date: Dec.23-2021
-  Description: This has all of the styling for the mobile and desktop homepage
-               Both nav types are in media separte queries
+  Description: Homepage body is setup with a grid of 12 columns, the recent works
+        use JQuery and a MIT lienced card slider to demo recent projects
+            Scetions Order
+                - Header
+                - About Me
+                - Recent Works
+                - Skills
+                - Expereience
+                - Contact Card
 */
-/* Mobile and Tablet Naviagation */
-.aboutMe {
-  top: 15vh;
+header {
   position: relative;
-  color: #002E4C;
-  /* Slider */
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: 70vh 15vh 5vh 10vh;
+      grid-template-rows: 70vh 15vh 5vh 10vh;
+      grid-template-areas: "titleName  titleName titleName" "subheading subheading subheading" "links links links" "space space space";
+  justify-items: center;
 }
 
-.aboutMe .titleText {
-  padding: 7vh 10vw 0vh 10vw;
-}
-
-.aboutMe h1 {
-  font-size: 3rem;
-  font-weight: 700;
-}
-
-.aboutMe h3 {
-  color: #FFEACE;
-  font-size: 1.25rem;
-  font-weight: 300;
-}
-
-.aboutMe .heading {
-  padding-top: 5vh;
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.aboutMe .heading h2 {
-  font-size: 1.5rem;
-  font-weight: 500;
-}
-
-.aboutMe .heading a {
-  font-size: 1.5rem;
-  font-weight: 400;
-  color: black;
-}
-
-.aboutMe ul {
-  list-style: none outside none;
-  padding-left: 0;
-  margin: 0;
-}
-
-.aboutMe .portfolioSilderContainer {
-  position: absolute;
-  padding: 10px;
-  height: 43vh;
-  width: 100vw;
-}
-
-.aboutMe .content-slider {
-  width: 100%;
-  height: 325px;
-}
-
-.aboutMe .content-slider li {
-  text-align: center;
-  color: #FFF;
-  margin: 0;
-  width: 150px;
-  height: 300px;
-}
-
-.card {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  background: url(/assets/media/background.jpg);
+header::before {
+  content: "";
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.01))), url(/assets/media/introMobile.svg);
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.01)), url(/assets/media/introMobile.svg);
   background-size: cover;
-  border-radius: 10px;
-}
-
-.card .overlay {
   width: 100%;
+  grid-row: titleName / space;
+  grid-column: titleName;
+  z-index: -2;
+}
+
+header::after {
+  content: "";
+  background-color: rgba(255, 255, 255, 0.35);
+  -webkit-filter: blur(2rem);
+          filter: blur(2rem);
+  width: 95%;
   height: 100%;
-  position: absolute;
-  border-radius: 10px;
-  background-color: rgba(0, 0, 0, 0.2);
-  visibility: hidden;
+  grid-row: subheading / links;
+  grid-column: titleName;
+  z-index: -1;
 }
 
-.card:hover .overlay {
-  visibility: visible;
-  -webkit-animation: fade 500ms;
-          animation: fade 500ms;
-}
-
-@-webkit-keyframes fade {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-@keyframes fade {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-.card .cardButton {
-  position: relative;
-  top: 70%;
-  width: 100px;
-  height: 30px;
-  border: none;
-  color: #fff;
-  background-color: #919191;
-  border-radius: 5px;
-  -webkit-transition: ease-out 800ms;
-  transition: ease-out 800ms;
-  font-size: .75rem;
-  font-weight: 500;
-  outline: none;
-}
-
-.card .cardButton:hover {
-  -webkit-box-shadow: inset 125px 0 0 0 white;
-          box-shadow: inset 125px 0 0 0 white;
-  cursor: pointer;
-  color: #002E4C;
-}
-
-.card .cardText p {
-  font-weight: 700;
-  text-align: center;
-  letter-spacing: 0.5px;
+header .titleName {
   color: white;
-  font-size: 1.5rem;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  text-align: center;
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 3;
+  grid-area: titleName;
+  -webkit-filter: drop-shadow(0.25em 0.25em 0.75em rgba(0, 0, 0, 0.25), 0.125em 0.125em 0.25em rgba(0, 0, 0, 0.15));
+          filter: drop-shadow(0.25em 0.25em 0.75em rgba(0, 0, 0, 0.25), 0.125em 0.125em 0.25em rgba(0, 0, 0, 0.15));
 }
 
-/* Skills Card */
-.skillSection {
-  background-color: #FFF;
-  padding: 2rem;
-  width: 100%;
-  height: 1000px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.skillSection .skillCard {
-  width: 80%;
-  height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.skillSection .skillCard .columnsContainer {
-  padding: 2rem;
+header .subheading {
   width: 90%;
-  height: 90%;
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 3;
+  grid-area: subheading;
+}
+
+header .subheading .typing {
+  color: #FFEACE;
+  position: relative;
+  -ms-flex-item-align: end;
+      -ms-grid-row-align: end;
+      align-self: end;
+}
+
+header .subheading .typing::after {
+  content: "";
+  position: relative;
+  top: -4px;
+  right: -2px;
+  width: 1px;
+  height: 100%;
+  border-right: 2px solid white;
+  -webkit-animation: blinking 200ms infinite ease;
+          animation: blinking 200ms infinite ease;
+}
+
+@-webkit-keyframes blinking {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes blinking {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+header .subheading h5 {
+  color: #002E4C;
+  padding-top: 1vh;
+  font-weight: 500;
+}
+
+header .links {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  width: 100%;
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
-  -webkit-box-shadow: 0 0 15px rgba(0, 0, 0, 0.7);
-          box-shadow: 0 0 15px rgba(0, 0, 0, 0.7);
+  -ms-grid-row: 3;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 3;
+  grid-area: links;
 }
 
-.skillSection .skillCard .columns {
-  width: 250px;
-  text-align: center;
-}
-
-.skillSection .skillCard .columns ol {
-  list-style: none;
-}
-
-.skillSection .skillCard .columns button {
-  width: 100px;
-  height: 30px;
-  border: none;
-  color: #fff;
-  background-color: #919191;
-  border-radius: 5px;
-  -webkit-transition: ease-out 800ms;
-  transition: ease-out 800ms;
-  font-size: .75rem;
-  font-weight: 500;
-  outline: none;
-}
-
-.skillSection .skillCard .columns button:hover {
-  -webkit-box-shadow: inset 125px 0 0 0 white;
-          box-shadow: inset 125px 0 0 0 white;
-  cursor: pointer;
+header .links a {
   color: #002E4C;
+  font-size: 1.25rem;
+}
+
+@media all and (min-width: 1024px) {
+  header::before {
+    background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.01))), url(/assets/media/introDesktop.svg);
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.01)), url(/assets/media/introDesktop.svg);
+    background-size: cover;
+  }
+}
+
+.aboutMe {
+  padding: 2rem;
+  height: 60vh;
+  display: -ms-grid;
+  display: grid;
+  grid: auto-flow/minmax(1em, 1fr) repeat 3, 1fr minmax(1em, 1fr);
+  justify-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.aboutMe h2 {
+  color: black;
+  -webkit-filter: drop-shadow(-10px 5px 0px rgba(0, 0, 0, 0.1));
+          filter: drop-shadow(-10px 5px 0px rgba(0, 0, 0, 0.1));
+  z-index: -1;
+}
+
+.aboutMe p {
+  background: rgba(82, 62, 31, 0.5);
+  width: 100%;
+  height: 100%;
+  padding: 3rem;
+  font-size: .75rem;
+  border: 2px black solid;
 }
 
 /*
@@ -465,26 +406,65 @@ header nav a:hover {
   Project: Resume Website
   File: styles.scss
   Date: Dec.23-2021
-  Description: This is the general styling for all of the css files in this project
+  Description: General style for the website
+    CSS afttribute ordering:
+        1. Display
+        2. Positioning
+        3. Box-model
+        4. Typography
+        5. Manipulation
+        6. Miscellaneous
 */
-* {
+*, *:before, *::after {
   margin: 0;
   padding: 0;
+  z-index: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
+  font-size: 1rem;
+  line-height: 1.6;
 }
 
 body {
   background-color: white;
+  color: black;
   overflow-x: hidden;
 }
 
 /* Sub Tags */
 p {
   text-align: justify;
-  font-size: 100%;
+  font-size: 1rem;
   text-indent: 2.5%;
+}
+
+h1, h2, h3 {
+  line-height: 1.1;
+}
+
+h1 {
+  font-size: 4.5rem;
+}
+
+h2 {
+  font-size: 3.75rem;
+}
+
+h3 {
+  font-size: 2.5rem;
+}
+
+h4 {
+  font-size: 1.75rem;
+}
+
+h5 {
+  font-size: 1.25rem;
+}
+
+h6 {
+  font-size: 1rem;
 }
 
 a {
@@ -493,6 +473,12 @@ a {
 
 ul {
   list-style: none;
+  text-transform: uppercase;
+}
+
+img {
+  display: block;
+  max-width: 100%;
 }
 
 /* Footer */
