--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -8,27 +8,54 @@
   Project: Resume Website
   File: styles.scss
   Date: Dec.23-2021
-  Description: This is the general styling for all of the css files in this project
+  Description: General style for the website
+    CSS afttribute ordering:
+        1. Display
+        2. Positioning
+        3. Box-model
+        4. Typography
+        5. Manipulation
+        6. Miscellaneous
 */
 
-*  {
+*, *:before, *::after  {
     margin: 0;
     padding: 0;
-    box-sizing: border-box; // Gets rid of border
-    font-family: 'Poppins', sans-serif;;
+    z-index: $bodyZIndex;
+    box-sizing: border-box;
+    font-family: $fontFamilyPrimiary;
+    font-size: $bodyText;
+    line-height: $lineHeight;
 }
 
 body {
     background-color: $bodyBackgroundColor;
+    color: $textColor;
     overflow-x: hidden;
 }
 
 /* Sub Tags */
 p {
     text-align: justify;
-    font-size: 100%;
+    font-size: $bodyText;
     text-indent: $pIndent;
 }
+
+h1, h2 ,h3 {
+    line-height: $headerLineHeight;
+}
+
+h1 {font-size: $head1;}
+
+h2 {font-size: $head2;}
+
+h3 {font-size: $head3;}
+
+h4 {font-size: $head4;}
+
+h5 {font-size: $head5;}
+
+h6 {font-size: $head6;}
 
 a {
     text-decoration: none;
@@ -36,6 +63,13 @@ a {
 
 ul {
     list-style: none;
+    text-transform: uppercase;
+}
+
+
+img {
+    display: block;
+    max-width: 100%;
 }
 
 /* Footer */
