--- a/assets/css/_homePage.scss
+++ b/assets/css/_homePage.scss
@@ -17,20 +17,22 @@
 header {
     position: relative;
     display: grid;
-    grid-template-rows: 70vh 15vh 5vh 10vh;
+    grid-template-rows: 70vh 15vh 10vh 5vh;
     grid-template-areas:
     "titleName  titleName titleName"
     "subheading subheading subheading"
     "links links links"
     "space space space";
     justify-items: center;
+    align-items: center;
     &::before {
         content: "";
         background: 
-        linear-gradient(rgba(0,0,0,0.5),
-                        rgba(0,0,0,0.01))
+        linear-gradient(rgba($secondaryColor,0.5),
+                        rgba($secondaryColor,0.01))
                        ,url(/assets/media/introMobile.svg);
         background-size: cover;
+        height: 100%;
         width: 100%;
         grid-row: titleName / space;
         grid-column: titleName;
@@ -39,9 +41,9 @@ header {
 
     &::after {
         content: "";
-        background-color: rgba( $dominantColor, .35);
+        background-color: rgba($dominantColor, .23);
         filter: blur(2rem);
-        width: 95%;
+        width: $widthSubheading + 5%;
         height: 100%;
         grid-row: subheading / links;
         grid-column: titleName;
@@ -50,19 +52,17 @@ header {
 
     .titleName {
         color: $dominantColor;
-        align-self: center;
         text-align: center;
         grid-area: titleName;
         filter: drop-shadow($boxShadow);
     }
 
     .subheading {
-        width: 90%;
+        width: $widthSubheading;
         grid-area: subheading;
         .typing {
             color: $ascentLightBrown;
             position: relative;
-            align-self: end;
             &::after {
                 content: "";
                 position: relative;
@@ -93,24 +93,46 @@ header {
         a {
             color: $ascentBlue;
             font-size: $head5;
+            &:hover {
+                color: $dominantColor;
+                transform: scale($scale);
+            }
         }
     }
     @media all and (min-width: $laptop) {
         &::before{
-            background: linear-gradient(rgba(0,0,0,0.5),
-                                        rgba(0,0,0,0.01))
+            background: linear-gradient(rgba($secondaryColor,0.5),
+                                        rgba($secondaryColor,0.01))
                         ,url(/assets/media/introDesktop.svg);
             background-size: cover;
-
+        }
+        &::after {
+            width: $widthIntroDesktop + 5%;
+        }
+        .titleName {
+            width: $widthIntroDesktop;
+        }
+        .subheading {
+            text-align: left;
+            width: $widthIntroDesktop;
+            padding-left: 3.5rem;
+            h5 {
+                padding-top: 0;
+            }
+        }
+        .links {
+            justify-content: space-around;
+            width: $widthIntroDesktop;
         }
     }
 }
 
 .aboutMe {
+    margin: 5rem;
     padding: 2rem;
     height: 60vh;
     display: grid;
-    grid: auto-flow / minmax(1em,1fr) repeat (3,1fr) minmax(1em,1fr);
+    grid: auto-flow / repeat (3,1fr); //minmax(1em,1fr);
     // grid-template-areas: 
     //     " waterMark space space1"
     //     " waterMark    card    card "
@@ -130,7 +152,7 @@ header {
         height: 100%;
         padding: 3rem;
         font-size: .75rem;
-        border: 2px black solid;
+        border: 2px $secondaryColor;
         // grid-row: card;
         // grid-column: card;
     }
