--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -18,10 +18,12 @@
 /* grey shades */
 /* Distances */
 /* Text */
+/* Miscellaneous */
 /* Animation Speeds */
 /* Don't forgot to fix the speed in type function of JS */
 /* Media Queries */
-/* Miscellaneous */
+/* Shadows */
+/* Transforms */
 /*
   Author: Steven Varada Salazr
   Project: Resume Website
@@ -59,7 +61,7 @@ nav .logo {
 }
 
 nav .logo a {
-  color: #8B8B8B;
+  color: black;
   font-size: 1.75rem;
   font-weight: 700;
   -webkit-transition: all 800ms ease-in-out;
@@ -137,7 +139,7 @@ nav .menu-toggle-label span,
 nav .menu-toggle-label span::before,
 nav .menu-toggle-label span::after {
   display: block;
-  background-color: #141414;
+  background-color: black;
   height: 3px;
   width: 1.5rem;
   border-radius: 25px;
@@ -251,10 +253,13 @@ header {
   position: relative;
   display: -ms-grid;
   display: grid;
-  -ms-grid-rows: 70vh 15vh 5vh 10vh;
-      grid-template-rows: 70vh 15vh 5vh 10vh;
+  -ms-grid-rows: 70vh 15vh 10vh 5vh;
+      grid-template-rows: 70vh 15vh 10vh 5vh;
       grid-template-areas: "titleName  titleName titleName" "subheading subheading subheading" "links links links" "space space space";
   justify-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 header::before {
@@ -262,6 +267,7 @@ header::before {
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.01))), url(/assets/media/introMobile.svg);
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.01)), url(/assets/media/introMobile.svg);
   background-size: cover;
+  height: 100%;
   width: 100%;
   grid-row: titleName / space;
   grid-column: titleName;
@@ -270,10 +276,10 @@ header::before {
 
 header::after {
   content: "";
-  background-color: rgba(255, 255, 255, 0.35);
+  background-color: rgba(255, 255, 255, 0.23);
   -webkit-filter: blur(2rem);
           filter: blur(2rem);
-  width: 95%;
+  width: 90%;
   height: 100%;
   grid-row: subheading / links;
   grid-column: titleName;
@@ -282,9 +288,6 @@ header::after {
 
 header .titleName {
   color: white;
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
   text-align: center;
   -ms-grid-row: 1;
   -ms-grid-column: 1;
@@ -295,7 +298,7 @@ header .titleName {
 }
 
 header .subheading {
-  width: 90%;
+  width: 85%;
   -ms-grid-row: 2;
   -ms-grid-column: 1;
   -ms-grid-column-span: 3;
@@ -305,9 +308,6 @@ header .subheading {
 header .subheading .typing {
   color: #FFEACE;
   position: relative;
-  -ms-flex-item-align: end;
-      -ms-grid-row-align: end;
-      align-self: end;
 }
 
 header .subheading .typing::after {
@@ -365,20 +365,46 @@ header .links a {
   font-size: 1.25rem;
 }
 
+header .links a:hover {
+  color: white;
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
 @media all and (min-width: 1024px) {
   header::before {
     background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.01))), url(/assets/media/introDesktop.svg);
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.01)), url(/assets/media/introDesktop.svg);
     background-size: cover;
   }
+  header::after {
+    width: 45%;
+  }
+  header .titleName {
+    width: 40%;
+  }
+  header .subheading {
+    text-align: left;
+    width: 40%;
+    padding-left: 3.5rem;
+  }
+  header .subheading h5 {
+    padding-top: 0;
+  }
+  header .links {
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    width: 40%;
+  }
 }
 
 .aboutMe {
+  margin: 5rem;
   padding: 2rem;
   height: 60vh;
   display: -ms-grid;
   display: grid;
-  grid: auto-flow/minmax(1em, 1fr) repeat 3, 1fr minmax(1em, 1fr);
+  grid: auto-flow/repeat 3, 1fr;
   justify-items: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -398,7 +424,7 @@ header .links a {
   height: 100%;
   padding: 3rem;
   font-size: .75rem;
-  border: 2px black solid;
+  border: 2px black;
 }
 
 /*
