--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -62,6 +62,7 @@ nav .logo {
 
 nav .logo a {
   color: black;
+  font-family: Valencia;
   font-size: 1.75rem;
   font-weight: 700;
   -webkit-transition: all 800ms ease-in-out;
@@ -202,7 +203,7 @@ nav menu ul {
 nav menu ul lh {
   color: #FFF;
   position: relative;
-  font-size: 1rem;
+  font-size: 1.1rem;
   text-transform: uppercase;
 }
 
@@ -399,32 +400,126 @@ header .links a:hover {
 }
 
 .aboutMe {
-  margin: 5rem;
-  padding: 2rem;
-  height: 60vh;
+  margin: 2rem;
   display: -ms-grid;
   display: grid;
-  grid: auto-flow/repeat 3, 1fr;
+  grid: 0.25fr 1fr 0.25fr/repeat(12, 1fr);
   justify-items: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
 }
 
-.aboutMe h2 {
-  color: black;
-  -webkit-filter: drop-shadow(-10px 5px 0px rgba(0, 0, 0, 0.1));
-          filter: drop-shadow(-10px 5px 0px rgba(0, 0, 0, 0.1));
-  z-index: -1;
+.aboutMe .background-content {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 11;
+  grid-column: 1 / 12;
+  -ms-grid-row: 2;
+  grid-row: 2;
 }
 
-.aboutMe p {
-  background: rgba(82, 62, 31, 0.5);
+.aboutMe .background-content h1 {
+  font-size: 7.5rem;
+  color: rgba(0, 0, 0, 0.08);
+  -webkit-filter: drop-shadow(-10px 5px 0px rgba(0, 0, 0, 0.1));
+          filter: drop-shadow(-10px 5px 0px rgba(0, 0, 0, 0.1));
+}
+
+.aboutMe .grid-content {
   width: 100%;
   height: 100%;
-  padding: 3rem;
-  font-size: .75rem;
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 10;
+  grid-column: 2 / 12;
+  -ms-grid-row: 2;
+  grid-row: 2;
   border: 2px black;
+}
+
+.skills {
+  padding: 1.5rem 0 1.5rem 0;
+  border-radius: 12px;
+  -webkit-box-shadow: 0 5px 5px 0 rgba(233, 240, 243, 0.5), 0 0 0 1px #E6ECF8;
+          box-shadow: 0 5px 5px 0 rgba(233, 240, 243, 0.5), 0 0 0 1px #E6ECF8;
+}
+
+.skills .skills-header {
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+}
+
+.skills .skillCard {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(250px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  text-align: center;
+}
+
+.skills .skillCard .img {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-item-align: center;
+      align-self: center;
+  height: 50px;
+}
+
+.skills .skillCard .columns {
+  border-right: 1px solid #E6ECF8;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: 100px 75px 1fr 50px;
+      grid-template-rows: 100px 75px 1fr 50px;
+}
+
+.skills .skillCard .columns ol {
+  list-style: none;
+}
+
+.skills .skillCard .columns:last-child {
+  border-right: none;
+}
+
+.experience {
+  padding: 1rem;
+}
+
+.experience .experience-Header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.experience .companies {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(100px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+}
+
+.experience .companies .company {
+  padding: 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 /*
@@ -447,8 +542,8 @@ header .links a:hover {
   z-index: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
-  font-size: 1rem;
+  font-family: HelveticaNowDisplay;
+  font-size: 1.1rem;
   line-height: 1.6;
 }
 
@@ -458,10 +553,15 @@ body {
   overflow-x: hidden;
 }
 
+main {
+  margin: 1rem;
+  padding: 2rem;
+}
+
 /* Sub Tags */
 p {
   text-align: justify;
-  font-size: 1rem;
+  font-size: 1.1rem;
   text-indent: 2.5%;
 }
 
@@ -510,5 +610,15 @@ img {
 /* Footer */
 footer {
   background-color: #C6C6C6;
+}
+
+@font-face {
+  font-family: Valencia;
+  src: url("./assets/font/Valencia.ttf") format("ttf");
+}
+
+@font-face {
+  font-family: HelveticaNowDisplay;
+  src: url("./assets/font/HelveticaNowDisplay.otf") format("oft");
 }
 /*# sourceMappingURL=styles.css.map */
